fixed slight alignment issue in waiver.html

--- a/pages/Trainer-waiver/waiver.css
+++ b/pages/Trainer-waiver/waiver.css
@@ -87,6 +87,8 @@ ul li {
     font-style: italic;
 }
 
+.form-info .email{margin-left: 25px;}
+
 .last .calendar{
     color: var(--primary-color);
     position: relative;
